Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-751

[PATCH] proton-c: pn_connect failures aren't exposed via messenger->error

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.8
    • proton-0.9
    • proton-c
    • None

    Description

      If I attempt to put and send a message using messenger to a unresolvable DNS name, messenger just blocks indefinitely (or until timeout if one is set) and the getaddrinfo failure is never exposed to the user via messenger->error
      ```
      e.g.,
      $ bundle exec ruby send.rb -a madeup.example.com
      ```

      The fix is to update pn_messenger_resolve to copy the error set on messenger->io to messenger->error in the event that PN_INVALID_SOCKET is returned by the pn_connect call (in the same way as we already do for pn_listener_ctx)

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            dnwe Dominic Evans
            dnwe Dominic Evans
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment