PROTON-751: if pn_connect fails copy io->error

Update pn_messenger_resolve to copy the error set on messenger->io to
messenger->error in the event that PN_INVALID_SOCKET is returned by the
pn_connect call (in the same way as we already do for pn_listener_ctx)